# dadwalakshay.github.io

./: .gitignore  README.md  archives.html  categories.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html  tasks.py
blog/: test-blog.html
category/: blog.html
content/blog/: hello-pelican.md  sse-pocketbase.md
content/pages/: 404.md
content/pages/authors/: akshay-dadwal.md
docs/: archives.html  authors.html  categories.html  index.html  tags.html
docs/author/: akshay-dadwal.html
docs/blog/: sse-pocketbase.html  start-blog.html  test-blog.html
docs/category/: blog.html  tech.html
docs/drafts/: start-blog.html
docs/pages/: 404.html
docs/pages/authors/: akshay-dadwal.html
docs/tag/: fastapi.html  github.html  guide.html  pelican.html  pocketbase.html  python.html  rdbms.html  sse.html  tutorial.html  websockets.html
output/: authors.html  index.html
output/author/: akshay-dadwal.html
output/pages/authors/: akshay-dadwal.html
output/tag/: pelican.html  tutorial.html
pages/: 404.html
static/assets/css/: main.css  third-party.css
static/assets/js/: script.js
tag/: github.html
